--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-type-animation": "^3.1.0",
     "resend": "^1.1.0",
     "tailwindcss": "3.3.3",
-    "@netlify/plugin-nextjs": "^4.10.0" // Add this line
+    "@netlify/plugin-nextjs": "^4.10.0"
   },
   "description": "This is a portfolio website built with Next.js and Tailwind CSS. It showcases your skills, projects, and achievements in an elegant and responsive design.",
   "main": "next.config.js",
